[gd_scene load_steps=30 format=2]

[ext_resource path="res://Textures/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Sounds/powerUp (1).wav" type="AudioStream" id=2]
[ext_resource path="res://Textures/new_theme2.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Textures/placeholders/Screenshot 2021-10-15 091813.jpg" type="Texture" id=5]
[ext_resource path="res://Scenes/hand.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/grid.png" type="Texture" id=7]
[ext_resource path="res://Materials/grid.tres" type="Material" id=8]
[ext_resource path="res://Scenes/testing.gd" type="Script" id=9]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/explosion (1).wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/pickupCoin (1).wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/powerUp (2).wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/explosion (3).wav" type="AudioStream" id=14]
[ext_resource path="res://Textures/New Piskel-7.png.png" type="Texture" id=15]
[ext_resource path="res://Sounds/powerUp.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/aggressive bit edit.mp3" type="AudioStream" id=17]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 105, 105 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 105, 0.119, 105 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 7 )
uv1_triplanar = true

[sub_resource type="CapsuleShape" id=5]
radius = 0.77101
height = 0.278027

[sub_resource type="SphereShape" id=15]
radius = 1.9

[sub_resource type="BoxShape" id=16]
extents = Vector3( 400, 3, 400 )

[sub_resource type="ProceduralSky" id=87]
sky_top_color = Color( 0.0784314, 0, 0.301961, 1 )
sky_horizon_color = Color( 0.0784314, 0, 0.301961, 1 )
sky_curve = 0.118756
ground_bottom_color = Color( 0, 0, 0.0392157, 1 )
ground_horizon_color = Color( 0.0784314, 0, 0.301961, 1 )
ground_curve = 0.0509825
sun_color = Color( 0, 0.6, 1, 1 )
sun_latitude = -72.63
texture_size = 0

[sub_resource type="Environment" id=88]
background_mode = 2
background_sky = SubResource( 87 )
background_color = Color( 0, 0.109804, 0.439216, 1 )
fog_depth_enabled = false
fog_depth_begin = 0.0
fog_depth_end = 0.0
fog_depth_curve = -2.14355

[sub_resource type="ProceduralSky" id=12]

[sub_resource type="Environment" id=13]
background_mode = 2
background_sky = SubResource( 12 )

[sub_resource type="World" id=14]
environment = SubResource( 13 )

[node name="main" type="Spatial"]
script = ExtResource( 9 )

[node name="floor" type="StaticBody" parent="."]
collision_layer = 2

[node name="MeshInstance" type="MeshInstance" parent="floor"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="floor"]
shape = SubResource( 2 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.273, 0 )
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 5 )

[node name="Head" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02436, 0 )

[node name="Camera" type="Camera" parent="Player/Head"]
current = true

[node name="interact" type="RayCast" parent="Player/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.897945 )
enabled = true
cast_to = Vector3( 0, 0, -4.468 )
collision_mask = 2147483648
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color( 1, 1, 0, 1 )

[node name="shoot" type="RayCast" parent="Player/Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.898 )
enabled = true
cast_to = Vector3( 0, 0, -420 )
collision_mask = 10
collide_with_areas = true
debug_shape_custom_color = Color( 1, 0, 0, 1 )

[node name="Area" type="Area" parent="Player"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Player/Area"]
shape = SubResource( 15 )

[node name="jump" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 2 )
volume_db = -5.244

[node name="shoot" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 10 )
volume_db = -4.37

[node name="powerup" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 13 )
volume_db = -4.37

[node name="explosion" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 14 )
volume_db = -5.244

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 60, 0 )
shadow_enabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2.99705, 1.1467, -70.7152 )
visible = false
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": "gone but never forgotten"
}

[node name="void" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="void"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -18.4796, 0 )
shape = SubResource( 16 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 88 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
margin_left = 30.0
margin_right = -30.0
margin_bottom = 182.0

[node name="H" type="HBoxContainer" parent="Control/V"]
margin_right = 964.0
margin_bottom = 54.0
theme = ExtResource( 1 )

[node name="timer" type="Label" parent="Control/V/H"]
margin_right = 318.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "bhjbiuhiouh"

[node name="power" type="Label" parent="Control/V/H"]
margin_left = 322.0
margin_right = 641.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "ffsdugio"
align = 1

[node name="score" type="Label" parent="Control/V/H"]
margin_left = 645.0
margin_right = 964.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "kln ijnioh"
align = 2

[node name="H2" type="HBoxContainer" parent="Control/V"]
margin_top = 58.0
margin_right = 964.0
margin_bottom = 91.0
theme = ExtResource( 3 )

[node name="timer_note" type="Label" parent="Control/V/H2"]
margin_right = 405.0
margin_bottom = 33.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="power_note" type="Label" parent="Control/V/H2"]
margin_left = 409.0
margin_right = 554.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "ffsdugio"
align = 1

[node name="score_note" type="Label" parent="Control/V/H2"]
margin_left = 558.0
margin_right = 964.0
margin_bottom = 33.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "kln ijnioh"
align = 2

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1355.0
margin_bottom = 1036.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1355, 1036 )
world = SubResource( 14 )
transparent_bg = true
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="Camera" parent="ViewportContainer/Viewport" instance=ExtResource( 6 )]

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 15 )
expand = true

[node name="sfx" type="Node" parent="."]

[node name="enemy_die" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 11 )
volume_db = -6.992

[node name="extra_time" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 12 )
volume_db = -5.244

[node name="start" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 16 )
volume_db = -5.0

[node name="bgm" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 17 )
autoplay = true

[connection signal="body_entered" from="Player/Area" to="Player" method="_on_Area_body_entered"]
[connection signal="body_entered" from="void" to="." method="_on_void_body_entered"]
